# rspotify

./: Cargo.toml  build_documentation.md
rspotify-http/: Cargo.toml
rspotify-http/src/: ureq.rs
rspotify-model/: Cargo.toml
rspotify-model/src/: auth.rs  category.rs  context.rs  idtypes.rs  page.rs
src/: auth_code.rs  auth_code_pkce.rs  client_creds.rs  db_replace_and_update.rs  lib.rs
src/clients/: base.rs  mod.rs  oauth.rs
src/clients/pagination/: iter.rs  mod.rs  response_senders.rs  stream.rs  wasm_stream.rs
src/sync/: blocking.rs  cast5_insecure_usage.rs  futures.rs  mod.rs
src/util/: mod.rs
