[package]
name = "rspotify-model"
version = "0.14.0"
authors = [
    "Ramsay Leung <ramsayleung@gmail.com>",
    "Mario Ortiz Manero <marioortizmanero@gmail.com>"
]
license = "MIT"
description = "Model for RSpotify"
homepage = "https://github.com/ramsayleung/rspotify"
repository = "https://github.com/ramsayleung/rspotify"
keywords = ["spotify", "api", "rspotify"]
categories = ["api-bindings", "multimedia::audio"]
edition = "2018"
readme = "../README.md"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
enum_dispatch = "0.3.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.9"
md5_full   = { package = "md-5", version = "0.10" }
md5 = "0.8.0"
digest = "0.10" 
sha1 = "0.10.6"
